syntax = "proto3";

option java_package = "com.zooty.protobuf";
option java_multiple_files = true;

service HelloWorldService {
  rpc SayHello(HelloWorldRequest) returns (HelloWorldResponse);
}

message HelloWorldRequest {
  string name = 1;
}

message HelloWorldResponse {
  string greeting = 1;
}
